platform/gateway/base/argocd-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd
  namespace: argocd
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: argocd.dev.bogus.net
      allowedRoutes:
        namespaces:
          from: Same
